add some adaptivity

--- a/index.html
+++ b/index.html
@@ -367,32 +367,8 @@
       </section>
       <section id="about-us" class="section">
         <div class="container about-us-section">
-          <div class="about-desc-division">
-            <h2 class="heading">About Us</h2>
-            <p class="about-description">
-              The model offers a framework for discussing problems related to
-              the user's experience, as well as possible ways and means of
-              solving them. Application development begins at the top level
-              (strategy), where the future software product is described quite
-              abstractly from the point of view of the expectations of both
-              users and the customer.
-            </p>
-            <ul class="list results-list">
-              <li class="results-item">
-                <p class="about-list-item">800</p>
-                <p>Pupils</p>
-              </li>
-              <li class="results-item">
-                <p class="about-list-item">18</p>
-                <p>Teachers</p>
-              </li>
-              <li class="results-item">
-                <p class="about-list-item">6</p>
-                <p>Foreign languages</p>
-              </li>
-            </ul>
-          </div>
-          <picture>
+          <h2 class="heading heading__about">About Us</h2>
+          <picture class="about-pic">
             <source
               srcset="
                 ./media/desktop/Businesscompetition-bro1-540.png   540w,
@@ -437,6 +413,28 @@
               alt="Business competition"
             />
           </picture>
+          <p class="about-description">
+            The model offers a framework for discussing problems related to the
+            user's experience, as well as possible ways and means of solving
+            them. Application development begins at the top level (strategy),
+            where the future software product is described quite abstractly from
+            the point of view of the expectations of both users and the
+            customer.
+          </p>
+          <ul class="list results-list">
+            <li class="results-item">
+              <p class="about-list-item">800</p>
+              <p class="about__text">Pupils</p>
+            </li>
+            <li class="results-item">
+              <p class="about-list-item">18</p>
+              <p class="about__text">Teachers</p>
+            </li>
+            <li class="results-item">
+              <p class="about-list-item">6</p>
+              <p class="about__text">Foreign languages</p>
+            </li>
+          </ul>
         </div>
       </section>
       <section id="pricing" class="section">
