--- a/index.html
+++ b/index.html
@@ -442,52 +442,57 @@
           <h2 class="heading skills-heading">Pricing</h2>
           <ul class="list pricing-list">
             <li class="pricing-list-item">
-              <picture>
-                <source
-                  srcset="
-                    ./media/desktop/online-426.png 426w,
-                    ./media/desktop/online-852.png 852w
-                  "
-                  sizes="(min-width: 1378px) 426px"
-                  media="(min-width: 1378px)"
-                  type="image/png"
-                />
-                <source
-                  srcset="
-                    ./media/tablet/Onlinetest-bro1-197.png 197w,
-                    ./media/tablet/Onlinetest-bro1-394.png 394w
-                  "
-                  sizes="(min-width: 768px) 197px"
-                  media="(min-width: 768px)"
-                  type="image/png"
-                />
+              <div class="price__wrapper">
+                <picture>
+                  <source
+                    srcset="
+                      ./media/desktop/online-426.png 426w,
+                      ./media/desktop/online-852.png 852w
+                    "
+                    sizes="(min-width: 1378px) 426px"
+                    media="(min-width: 1378px)"
+                    type="image/png"
+                  />
+                  <source
+                    srcset="
+                      ./media/tablet/Onlinetest-bro1-197.png 197w,
+                      ./media/tablet/Onlinetest-bro1-394.png 394w
+                    "
+                    sizes="(min-width: 768px) 197px"
+                    media="(min-width: 768px)"
+                    type="image/png"
+                  />
 
-                <source
-                  srcset="
-                    ./media/large-phone/Onlinetest-bro1-291.png 291w,
-                    ./media/large-phone/Onlinetest-bro1-582.png 582w
-                  "
-                  sizes="(min-width: 575px) 291px"
-                  media="(min-width: 575px)"
-                  type="image/png"
-                />
+                  <source
+                    srcset="
+                      ./media/large-phone/Onlinetest-bro1-291.png 291w,
+                      ./media/large-phone/Onlinetest-bro1-582.png 582w
+                    "
+                    sizes="(min-width: 575px) 291px"
+                    media="(min-width: 575px)"
+                    type="image/png"
+                  />
 
-                <source
-                  srcset="
-                    ./media/mini-phone/Onlinetest-bro1-248.png 248w,
-                    ./media/mini-phone/Onlinetest-bro1-496.png 496w
-                  "
-                  sizes="(min-width: 320px) 248px"
-                  media="(min-width: 320px)"
-                  type="image/png"
-                />
+                  <source
+                    srcset="
+                      ./media/mini-phone/Onlinetest-bro1-248.png 248w,
+                      ./media/mini-phone/Onlinetest-bro1-496.png 496w
+                    "
+                    sizes="(min-width: 320px) 248px"
+                    media="(min-width: 320px)"
+                    type="image/png"
+                  />
 
-                <img src="./media/desktop/online-426.png" alt="Online lesson" />
-              </picture>
+                  <img
+                    src="./media/desktop/online-426.png"
+                    alt="Online lesson"
+                  />
+                </picture>
+              </div>
               <h3 class="list-item-heading pricing-list-heading">
                 Self-study online course
               </h3>
-              <p>
+              <p class="pricing__text text">
                 Start learning English online in live classes with qualified EC
                 teachers and students from all over the world.
               </p>
@@ -497,55 +502,57 @@
               </div>
             </li>
             <li class="pricing-list-item">
-              <picture>
-                <source
-                  srcset="
-                    ./media/desktop/lesson-426.png 426w,
-                    ./media/desktop/lesson-852.png 852w
-                  "
-                  sizes="(min-width: 1378px) 426px"
-                  media="(min-width: 1378px)"
-                  type="image/png"
-                />
-                <source
-                  srcset="
-                    ./media/tablet/Lesson-bro1-219.png 219w,
-                    ./media/tablet/Lesson-bro1-438.png 438w
-                  "
-                  sizes="(min-width: 768px) 219px"
-                  media="(min-width: 768px)"
-                  type="image/png"
-                />
+              <div class="price__wrapper">
+                <picture>
+                  <source
+                    srcset="
+                      ./media/desktop/lesson-426.png 426w,
+                      ./media/desktop/lesson-852.png 852w
+                    "
+                    sizes="(min-width: 1378px) 426px"
+                    media="(min-width: 1378px)"
+                    type="image/png"
+                  />
+                  <source
+                    srcset="
+                      ./media/tablet/Lesson-bro1-219.png 219w,
+                      ./media/tablet/Lesson-bro1-438.png 438w
+                    "
+                    sizes="(min-width: 768px) 219px"
+                    media="(min-width: 768px)"
+                    type="image/png"
+                  />
 
-                <source
-                  srcset="
-                    ./media/large-phone/Lesson-bro1-314.png 314w,
-                    ./media/large-phone/Lesson-bro1-628.png 628w
-                  "
-                  sizes="(min-width: 575px) 314px"
-                  media="(min-width: 575px)"
-                  type="image/png"
-                />
+                  <source
+                    srcset="
+                      ./media/large-phone/Lesson-bro1-314.png 314w,
+                      ./media/large-phone/Lesson-bro1-628.png 628w
+                    "
+                    sizes="(min-width: 575px) 314px"
+                    media="(min-width: 575px)"
+                    type="image/png"
+                  />
 
-                <source
-                  srcset="
-                    ./media/mini-phone/Lesson-bro1-257.png 257w,
-                    ./media/mini-phone/Lesson-bro1-514.png 514w
-                  "
-                  sizes="(min-width: 320px) 257px"
-                  media="(min-width: 320px)"
-                  type="image/png"
-                />
+                  <source
+                    srcset="
+                      ./media/mini-phone/Lesson-bro1-257.png 257w,
+                      ./media/mini-phone/Lesson-bro1-514.png 514w
+                    "
+                    sizes="(min-width: 320px) 257px"
+                    media="(min-width: 320px)"
+                    type="image/png"
+                  />
 
-                <img
-                  src="./media/desktop/lesson-426.png"
-                  alt="Lesson-with-good-friends"
-                />
-              </picture>
+                  <img
+                    src="./media/desktop/lesson-426.png"
+                    alt="Lesson-with-good-friends"
+                  />
+                </picture>
+              </div>
               <h3 class="list-item-heading pricing-list-heading">
                 Live online classes
               </h3>
-              <p>
+              <p class="pricing__text">
                 Interactive group classes with expert teachers. Free 7-day trial
               </p>
               <div class="price live-and-personal">
@@ -554,52 +561,57 @@
               </div>
             </li>
             <li class="pricing-list-item">
-              <picture>
-                <source
-                  srcset="
-                    ./media/desktop/webinar-426.png 426w,
-                    ./media/desktop/webinar-852.png 852w
-                  "
-                  sizes="(min-width: 1378px) 426px"
-                  media="(min-width: 1378px)"
-                  type="image/png"
-                />
-                <source
-                  srcset="
-                    ./media/tablet/Webinar-bro2-210.png 210w,
-                    ./media/tablet/Webinar-bro2-420.png 420w
-                  "
-                  sizes="(min-width: 768px) 210px"
-                  media="(min-width: 768px)"
-                  type="image/png"
-                />
+              <div class="price__wrapper">
+                <picture>
+                  <source
+                    srcset="
+                      ./media/desktop/webinar-426.png 426w,
+                      ./media/desktop/webinar-852.png 852w
+                    "
+                    sizes="(min-width: 1378px) 426px"
+                    media="(min-width: 1378px)"
+                    type="image/png"
+                  />
+                  <source
+                    srcset="
+                      ./media/tablet/Webinar-bro2-210.png 210w,
+                      ./media/tablet/Webinar-bro2-420.png 420w
+                    "
+                    sizes="(min-width: 768px) 210px"
+                    media="(min-width: 768px)"
+                    type="image/png"
+                  />
 
-                <source
-                  srcset="
-                    ./media/large-phone/Webinar-bro2-253.png 253w,
-                    ./media/large-phone/Webinar-bro2-506.png 506w
-                  "
-                  sizes="(min-width: 575px) 253px"
-                  media="(min-width: 575px)"
-                  type="image/png"
-                />
+                  <source
+                    srcset="
+                      ./media/large-phone/Webinar-bro2-253.png 253w,
+                      ./media/large-phone/Webinar-bro2-506.png 506w
+                    "
+                    sizes="(min-width: 575px) 253px"
+                    media="(min-width: 575px)"
+                    type="image/png"
+                  />
 
-                <source
-                  srcset="
-                    ./media/mini-phone/Webinar-bro2-241.png 240w,
-                    ./media/mini-phone/Webinar-bro2-482.png 480w
-                  "
-                  sizes="(min-width: 320px) 240px"
-                  media="(min-width: 320px)"
-                  type="image/png"
-                />
+                  <source
+                    srcset="
+                      ./media/mini-phone/Webinar-bro2-241.png 240w,
+                      ./media/mini-phone/Webinar-bro2-482.png 480w
+                    "
+                    sizes="(min-width: 320px) 240px"
+                    media="(min-width: 320px)"
+                    type="image/png"
+                  />
 
-                <img src="./media/desktop/webinar-426.png" alt="Webinar lady" />
-              </picture>
+                  <img
+                    src="./media/desktop/webinar-426.png"
+                    alt="Webinar lady"
+                  />
+                </picture>
+              </div>
               <h3 class="list-item-heading pricing-list-heading">
                 Personal Tuition
               </h3>
-              <p>
+              <p class="pricing__text">
                 Online one-to-one English tutoring – enjoy our first session for
                 only &#36;1
               </p>
