--- a/index.html
+++ b/index.html
@@ -625,50 +625,52 @@
       </section>
       <section id="contact-us" class="section contact-section">
         <div class="container contact-us-thumb">
-          <picture>
-            <source
-              srcset="
-                ./media/desktop/contact-425.png 425w,
-                ./media/desktop/contact-850.png 850w
-              "
-              sizes="(min-width: 1378px) 425px"
-              media="(min-width: 1378px)"
-              type="image/png"
-            />
-            <source
-              srcset="
-                ./media/tablet/contact-233.png 233w,
-                ./media/tablet/contact-466.png 466w
-              "
-              sizes="(min-width: 768px) 233px"
-              media="(min-width: 768px)"
-              type="image/png"
-            />
+          <div class="contact__wrapper">
+            <picture>
+              <source
+                srcset="
+                  ./media/desktop/contact-425.png 425w,
+                  ./media/desktop/contact-850.png 850w
+                "
+                sizes="(min-width: 1378px) 425px"
+                media="(min-width: 1378px)"
+                type="image/png"
+              />
+              <source
+                srcset="
+                  ./media/tablet/contact-233.png 233w,
+                  ./media/tablet/contact-466.png 466w
+                "
+                sizes="(min-width: 768px) 233px"
+                media="(min-width: 768px)"
+                type="image/png"
+              />
 
-            <source
-              srcset="
-                ./media/large-phone/contact-358.png 358w,
-                ./media/large-phone/contact-716.png 716w
-              "
-              sizes="(min-width: 575px) 358px"
-              media="(min-width: 575px)"
-              type="image/png"
-            />
+              <source
+                srcset="
+                  ./media/large-phone/contact-358.png 358w,
+                  ./media/large-phone/contact-716.png 716w
+                "
+                sizes="(min-width: 575px) 358px"
+                media="(min-width: 575px)"
+                type="image/png"
+              />
 
-            <source
-              srcset="
-                ./media/mini-phone/contact-253.png 253w,
-                ./media/mini-phone/contact-506.png 506w
-              "
-              sizes="(min-width: 320px) 253px"
-              media="(min-width: 320px)"
-              type="image/png"
-            />
+              <source
+                srcset="
+                  ./media/mini-phone/contact-253.png 253w,
+                  ./media/mini-phone/contact-506.png 506w
+                "
+                sizes="(min-width: 320px) 253px"
+                media="(min-width: 320px)"
+                type="image/png"
+              />
 
-            <img src="./media/desktop/contact-425.png" alt="Contact us" />
-          </picture>
+              <img src="./media/desktop/contact-425.png" alt="Contact us" />
+            </picture>
+          </div>
           <div class="contact-data">
-            <h2 class="heading">Contact Us</h2>
+            <h2 class="heading contact__heading">Contact Us</h2>
             <p class="contact-us-description">
               Discover your current English level by taking our free online
               English test. Sign up to our newsletter for learning tips and free
