--- a/index.html
+++ b/index.html
@@ -625,6 +625,9 @@
       </section>
       <section id="contact-us" class="section contact-section">
         <div class="container contact-us-thumb">
+          <h2 class="heading contact__heading contact__heading--mobile">
+            Contact Us
+          </h2>
           <div class="contact__wrapper">
             <picture>
               <source
@@ -670,7 +673,9 @@
             </picture>
           </div>
           <div class="contact-data">
-            <h2 class="heading contact__heading">Contact Us</h2>
+            <h2 class="heading contact__heading contact__heading--desktop">
+              Contact Us
+            </h2>
             <p class="contact-us-description">
               Discover your current English level by taking our free online
               English test. Sign up to our newsletter for learning tips and free
