--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
               With our teachers who write a program for each student, you will
               be able to make your first sketch after the first lesson.
             </p>
-            <button class="hero-button" type="button">Get started</button>
+            <button class="hero-button" type="button" data-modal-open>
+              Get started
+            </button>
           </div>
           <div class="hero__thumb">
             <picture>
@@ -731,7 +733,98 @@
           </ul>
         </div>
       </footer>
+      <button
+        class="to-top to-top--position to-top--style"
+        type="button"
+        aria-label="Scroll to top button"
+      >
+        &#8686;
+      </button>
+
+      <div class="franchise backdrop is-hidden" data-modal>
+        <div class="about-modal">
+          <button
+            class="about-modal__close-btn"
+            type="button"
+            aria-label="button close"
+            data-modal-close
+          >
+            <svg class="franchise__close" width="30px" height="30px">
+              <use href="./media/icons.svg#close_mobile"></use>
+            </svg>
+          </button>
+
+          <p class="about-modal__title">Learn Any Foreign Language</p>
+
+          <form class="blank">
+            <ul class="blank__list list">
+              <li class="blank__field">
+                <label class="about-modal__text"
+                  >Full name
+                  <input
+                    class="about-modal__form-text about-modal__form"
+                    type="text"
+                    name="name"
+                    autocomplete="off"
+                    required
+                    minlength="2"
+                  />
+                </label>
+              </li>
+              <li class="blank__field">
+                <label class="about-modal__text"
+                  >Phone
+                  <input
+                    class="about-modal__form-text about-modal__form"
+                    type="tel"
+                    name="tel"
+                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                    required
+                  />
+                </label>
+              </li>
+              <li class="blank__field">
+                <label class="about-modal__text"
+                  >Email
+                  <input
+                    class="about-modal__form-text about-modal__form"
+                    type="email"
+                    name="mail"
+                    required
+                  />
+                </label>
+              </li>
+              <li class="blank__field">
+                <label label class="about-modal__text"
+                  >Choose your city
+                  <input
+                    class="about-modal__form-text about-modal__form"
+                    list="city"
+                    name="cities"
+                    required
+                  />
+                </label>
+                <datalist id="city">
+                  <option>London</option>
+                  <option>Moskow</option>
+                  <option>Los-Angeles</option>
+                  <option>Vishnevets</option>
+                  <option>Kiev</option>
+                </datalist>
+              </li>
+            </ul>
+            <div class="blank__box">
+              <button class="hero-button form__btn" type="submit">
+                Submit
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
     <script src="./menu.js"></script>
+    <script src="./scroll.js"></script>
+    <script src="./to-top.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
