--- a/index.html
+++ b/index.html
@@ -759,51 +759,95 @@
           <form class="blank">
             <ul class="blank__list list">
               <li class="blank__field">
-                <label class="about-modal__text"
-                  >Full name
-                  <input
+                <label class="about-modal__text" for="text">Full name</label>
+                <span class="form__wrapper"
+                  ><input
                     class="about-modal__form-text about-modal__form"
                     type="text"
                     name="name"
+                    id="text"
                     autocomplete="off"
                     required
                     minlength="2"
                   />
-                </label>
+                  <svg class="form__check-icon" width="20" height="20">
+                    <use class="start-icon" href="./media/icons.svg#user"></use>
+                    <use
+                      class="finish-icon"
+                      href="./media/icons.svg#user-check"
+                    ></use>
+                  </svg>
+                </span>
               </li>
               <li class="blank__field">
-                <label class="about-modal__text"
-                  >Phone
-                  <input
+                <label class="about-modal__text" for="tel">Phone </label>
+                <span class="form__wrapper"
+                  ><input
                     class="about-modal__form-text about-modal__form"
                     type="tel"
                     name="tel"
+                    id="tel"
                     pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                     required
                   />
-                </label>
+                  <svg class="form__check-icon" width="20" height="20">
+                    <use
+                      class="start-icon"
+                      href="./media/icons.svg#phone"
+                    ></use>
+                    <use
+                      class="finish-icon"
+                      href="./media/icons.svg#phone-hang-up"
+                    ></use>
+                  </svg>
+                </span>
               </li>
               <li class="blank__field">
-                <label class="about-modal__text"
-                  >Email
+                <label class="about-modal__text" for="mail">Email </label>
+                <span class="form__wrapper">
                   <input
                     class="about-modal__form-text about-modal__form"
                     type="email"
                     name="mail"
+                    id="mail"
                     required
                   />
-                </label>
+                  <svg class="form__check-icon" width="20" height="20">
+                    <use
+                      class="start-icon"
+                      href="./media/icons.svg#bubbles"
+                    ></use>
+                    <use
+                      class="finish-icon"
+                      href="./media/icons.svg#envelop"
+                    ></use>
+                  </svg>
+                </span>
               </li>
               <li class="blank__field">
-                <label label class="about-modal__text"
+                <label label class="about-modal__text" for="some"
                   >Choose your city
-                  <input
+                </label>
+                <span class="form__wrapper"
+                  ><input
                     class="about-modal__form-text about-modal__form"
                     list="city"
                     name="cities"
+                    id="some"
                     required
                   />
-                </label>
+                  <svg class="form__check-icon" width="20" height="20">
+                    <use
+                      class="start-icon"
+                      href="./media/icons.svg#compass2"
+                    ></use>
+                    <use
+                      class="finish-icon"
+                      href="./media/icons.svg#checkmark"
+                    ></use>
+                  </svg>
+                </span>
+
                 <datalist id="city">
                   <option>London</option>
                   <option>Moskow</option>
