--- a/index.html
+++ b/index.html
@@ -787,7 +787,6 @@
                     type="tel"
                     name="tel"
                     id="tel"
-                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                     required
                   />
                   <svg class="form__check-icon" width="20" height="20">
@@ -858,7 +857,7 @@
               </li>
             </ul>
             <div class="blank__box">
-              <button class="hero-button form__btn" type="submit">
+              <button class="hero-button form__btn" type="submit" data-submit>
                 Submit
               </button>
             </div>
